--- a/docker/aarch64/Dockerfile
+++ b/docker/aarch64/Dockerfile
@@ -2,8 +2,10 @@ FROM debian:stretch
 
 RUN dpkg --add-architecture arm64 && \
     apt-get update && \
-    apt-get install -y --no-install-recommends nettle-dev:arm64 gcc-aarch64-linux-gnu libc-dev-arm64-cross \
-        make file wget netcat-traditional sqlite3 git ca-certificates ssh libcap-dev:arm64
+    apt-get install -y --no-install-recommends nettle-dev:arm64 \
+        gcc-aarch64-linux-gnu libc-dev-arm64-cross make file wget \
+        netcat-traditional sqlite3 git ca-certificates ssh libcap-dev:arm64 \
+        build-essential debhelper dh-systemd
 
 # Install ghr for GitHub Releases: https://github.com/tcnksm/ghr
 RUN wget https://github.com/tcnksm/ghr/releases/download/v0.12.0/ghr_v0.12.0_linux_amd64.tar.gz && \
