--- a/docker/armhf/Dockerfile
+++ b/docker/armhf/Dockerfile
@@ -5,7 +5,7 @@ RUN dpkg --add-architecture armhf && \
     apt-get install -y --no-install-recommends nettle-dev:armhf \
         gcc-arm-linux-gnueabihf libc6-dev-armhf-cross make file wget \
         netcat-traditional sqlite3 git ca-certificates ssh libcap-dev:armhf \
-        build-essential debhelper dh-systemd
+        build-essential debhelper dh-systemd python3
 
 # Install ghr for GitHub Releases: https://github.com/tcnksm/ghr
 RUN wget https://github.com/tcnksm/ghr/releases/download/v0.12.0/ghr_v0.12.0_linux_amd64.tar.gz && \
