--- a/docker/x86_32/Dockerfile
+++ b/docker/x86_32/Dockerfile
@@ -4,7 +4,7 @@ RUN dpkg --add-architecture i386 && \
     apt-get update && \
     apt-get install -y --no-install-recommends nettle-dev:i386 gcc gcc-multilib \
         make file wget netcat-traditional sqlite3 git ca-certificates ssh \
-        libcap-dev:i386 build-essential debhelper dh-systemd
+        libcap-dev:i386 build-essential debhelper dh-systemd python3
 
 # Install ghr for GitHub Releases: https://github.com/tcnksm/ghr
 RUN wget https://github.com/tcnksm/ghr/releases/download/v0.12.0/ghr_v0.12.0_linux_amd64.tar.gz && \
