Explicitly run debhelper with systemd support
Signed-off-by: Mcat12 <newtoncat12@yahoo.com>

--- a/debian/rules
+++ b/debian/rules
@@ -1,7 +1,7 @@
 #!/usr/bin/make -f
 
 %:
-	dh $@
+	dh $@ --with systemd
 
 # Override these two rules to prevent unnecessary rebuilding
 override_dh_auto_clean:
