Persist the tmpfile when transitioning to the RPM build step
Signed-off-by: Mcat12 <newtoncat12@yahoo.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,6 +49,7 @@ version: 2
           - Makefile
           - LICENSE
           - debian/pihole-FTL.service
+          - debian/pihole-ftl.tmpfile
           - rpm/pihole-ftl.spec
 
 .rpm_template: &rpm_template
