--- a/debian/pihole-FTL.service
+++ b/debian/pihole-FTL.service
@@ -11,7 +11,7 @@ Wants=nss-lookup.target
 Before=nss-lookup.target
 
 [Service]
-Restart=on-failure
+Restart=on-abnormal
 User=pihole
 Group=pihole
 ExecStart=/usr/bin/pihole-FTL no-daemon
